2010-11-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.2.0beta1

2010-11-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #15755: Allow DBAL to interact with EM to configure remapping

2010-10-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #16179: 1-2-3 install tool wizard does not let DBAL load early enough
	* Fixed bug #15941: Log deprecated functions (and adjust comments)
	* Fixed bug #15960: Misleading error message in ux_t3lib_DB->cacheFieldInfo() (thanks to Martin Kuster)
	* Fixed bug #16120: UPDATE queries fails for $GLOBALS['TYPO3_DB']->sql_query (thanks to Alan Oguzhan)

2010-10-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.2.0alpha3

2010-09-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #15075: [Install] make a pre-check for required php-extensions (thanks to Jigal van Hemert)

2010-09-21  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.2.0alpha2

2010-09-20  Xavier Perseguers  <typo3@perseguers.ch>

	* Merged branch QueryCache to trunk
	* Updated documentation to describe how to use Memcached to cache prepared queries
	* Fixed bug #15751: dbal does not parse setDBinit correctly (thanks to Tamer Erdogan)

2010-08-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15582: Call to deprecated function template::middle()

2010-08-24  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed caching with Memcached
	* Synchronized code from trunk

2010-08-23  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15535: Error: No pages are found on the rootlevel! in Frontend when using Oracle
	* Updated ADOdb version dependency
	* Set version to 1.2.0alpha1

2010-08-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated caching mechanism to cache prepared queries
	* Synchronized code from trunk
	* Added unit test for feature #15457
	* Added feature #15457: Add support for prepared queries

2010-08-14  Xavier Perseguers  <typo3@perseguers.ch>
